--- a/css/main.css
+++ b/css/main.css
@@ -260,4 +260,70 @@ body {
   .collection__block {
     padding-top: 151px;
   }
+}
+.raqam__01 {
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 100%;
+  text-align: center;
+  color: #fdd6ba;
+  margin-bottom: 24px;
+}
+
+.works_block {
+  width: 327px;
+  height: 1116px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.h3_1 {
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 114%;
+  text-align: center;
+  color: #333d4b;
+  margin-bottom: 24px;
+}
+
+.p_1 {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 167%;
+  text-align: center;
+  color: #333d4b;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.h1_1 {
+  margin-top: 120px;
+  margin-bottom: 80px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  color: #83888f;
+}
+
+.block__list {
+  margin-bottom: 58px;
+}
+
+.link_careate {
+  width: 217px;
+  height: 56px;
+  background-color: #0e8784;
+  font-family: var(--font-family);
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 139%;
+  text-align: center;
+  color: #fefcf7;
+  padding: 15px 31px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 6px;
+  margin-top: 79px;
+  margin-bottom: 120px;
 }/*# sourceMappingURL=main.css.map */
